--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ 
+.slick-prev {
+    left: 3% !important;
+    z-index: 1;
+  }
+  
+  .slick-next {
+    right: 6% !important;
+    z-index: 1;
+  }
+  
+  .slick-next:before,
+  .slick-prev:before {
+    content: '' !important;
+    color: black;
+  }
+  .next-slick-arrow,  
+  .prev-slick-arrow {  
+    color: rgb(255, 255, 255);
+    font-size: 48px;
+  }
